perf(registry_center): add consumer cache (service metadata) and watch event