@@ -1,6 +1,7 @@
 package com.youyi.rpc.registry;
 
 import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.collection.ConcurrentHashSet;
 import cn.hutool.cron.CronUtil;
 import cn.hutool.cron.task.Task;
 import cn.hutool.json.JSONUtil;
@@ -11,15 +12,16 @@ import io.etcd.jetcd.Client;
 import io.etcd.jetcd.KV;
 import io.etcd.jetcd.KeyValue;
 import io.etcd.jetcd.Lease;
+import io.etcd.jetcd.Watch;
 import io.etcd.jetcd.options.GetOption;
 import io.etcd.jetcd.options.PutOption;
+import io.etcd.jetcd.watch.WatchEvent;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -44,6 +46,16 @@ public class EtcdRegistry implements Registry {
      * 本机注册的节点 Key 集合，用于维护续期
      */
     private final Set<String> LOCAL_REGISTERED_NODE_KEY_SET = new HashSet<>();
+
+    /**
+     * 注册中心服务节点元信息缓存
+     */
+    private final RegistryServiceCache REGISTRY_SERVICE_CACHE = new RegistryServiceCache();
+
+    /**
+     * 正在监听的 Key 集合
+     */
+    private final Set<String> WATCHING_KEY_SET = new ConcurrentHashSet<>();
 
     private Client client;
 
@@ -90,6 +102,14 @@ public class EtcdRegistry implements Registry {
 
     @Override
     public List<ServiceMetadata> discovery(String serviceKey) {
+
+        // 读取缓存
+        List<ServiceMetadata> serviceMetadataCache = REGISTRY_SERVICE_CACHE.read();
+        if (CollUtil.isNotEmpty(serviceMetadataCache)) {
+            log.info("read service metadata from local cache[REGISTRY_SERVICE_CACHE]!");
+            return serviceMetadataCache;
+        }
+
         // 前缀搜索时，需要加上结尾的 '/'
         String searchPrefix = ETCD_ROOT_PATH + serviceKey + "/";
 
@@ -100,35 +120,44 @@ public class EtcdRegistry implements Registry {
                     ByteSequence.from(searchPrefix, StandardCharsets.UTF_8),
                     getOp).get().getKvs();
             // 解析服务信息
-            return keyValueList.stream()
+            List<ServiceMetadata> serviceMetadataList = keyValueList.stream()
                     .map(keyValue -> {
+                        String key = keyValue.getKey().toString(StandardCharsets.UTF_8);
+                        // 监听 key 的变化
+                        watch(key);
                         String value = keyValue.getValue().toString(StandardCharsets.UTF_8);
                         return JSONUtil.toBean(value, ServiceMetadata.class);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
+            // 写入缓存
+            log.info("write service metadata into local cache[REGISTRY_SERVICE_CACHE]!");
+            REGISTRY_SERVICE_CACHE.write(serviceMetadataList);
+            return serviceMetadataList;
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException("service discovery error, ", e);
         }
     }
 
     @Override
-    public void destroy() {
-        log.info("current registry node is destroying");
-        // 下线节点
-        for (String regKey : LOCAL_REGISTERED_NODE_KEY_SET) {
-            try {
-                kvClient.delete(ByteSequence.from(regKey, StandardCharsets.UTF_8)).get();
-            } catch (Exception e) {
-                throw new RuntimeException(regKey + " offline failed", e);
-            }
+    public void watch(String serviceNodeKey) {
+        boolean toBeWatching = WATCHING_KEY_SET.add(serviceNodeKey);
+        if (!toBeWatching) {
+            return;
         }
-        // 关闭连接
-        if (kvClient != null) {
-            kvClient.close();
-        }
-        if (client != null) {
-            client.close();
-        }
+
+        // 之前未监听，开启监听
+        Watch watchClient = client.getWatchClient();
+        watchClient.watch(ByteSequence.from(serviceNodeKey, StandardCharsets.UTF_8),
+                response -> {
+                    List<WatchEvent> events = response.getEvents();
+                    for (WatchEvent event : events) {
+                        // key 删除时触发，清理注册服务缓存
+                        if (WatchEvent.EventType.DELETE.equals(event.getEventType())) {
+                            log.info("{} is offline, clear cache", serviceNodeKey);
+                            REGISTRY_SERVICE_CACHE.clear();
+                        }
+                    }
+                });
     }
 
     @Override
@@ -159,5 +188,25 @@ public class EtcdRegistry implements Registry {
         // 设置秒匹配
         CronUtil.setMatchSecond(true);
         CronUtil.start();
+    }
+
+    @Override
+    public void destroy() {
+        log.info("current registry node is destroying");
+        // 下线节点
+        for (String regKey : LOCAL_REGISTERED_NODE_KEY_SET) {
+            try {
+                kvClient.delete(ByteSequence.from(regKey, StandardCharsets.UTF_8)).get();
+            } catch (Exception e) {
+                throw new RuntimeException(regKey + " offline failed", e);
+            }
+        }
+        // 关闭连接
+        if (kvClient != null) {
+            kvClient.close();
+        }
+        if (client != null) {
+            client.close();
+        }
     }
 }
